--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google-site-verification" content="pzoiiFwX74moLyjoUv3aXIOhxPK4m4WERF0Fuz_y8S0" />
-    <meta name="description" content="Мы открыли студию в 2019 году в Воронеже. Так как в нашей школе учились представители очень многих национальностей Кавказа, мы приняли решение назвать студию «Кавказ»." />
+    <meta name="description" content="Обучение на кавказском барабане (дхол) детям и взрослым. Мы рады всем независимо от национальности и музыкального образования." />
     <meta name="keywords" content="Kavkaz-Studio, kavkaz-studio, studio kavkaz, xmbak kavkaz studio, Karen Hovhannisyan, Karen kavkaz studio, voronezh kavkaz studio, moskva kavkaz studio, Кавказ-Студио, студио кавказ, кавказ студио, воронеж кавказ, воронеж кавказ студио, москва кавказ студио, dhol, уроки на дхол">
     <meta name="theme-color" content="#000000" />
     <meta
